// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Creator/New Block Active State 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 12px 32px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Blue 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(197,231,246,0.8),#c5e7f6);
  box-shadow: 0 0 0 1.3px #2a94d450;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #2a94d450,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #0f7ec0;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Disabled State 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
  opacity: 0.7;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Green 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(229,238,229,0.8),#e5eee5);
  box-shadow: 0 0 0 1.3px #68906850;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #68906850 ,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #6b7a6b;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Long Name 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        Block with a veeeeeeeeeeeeeeeeeeeeeeeeeeeeeeery long name
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Purple 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(232,222,238,0.8),#e8deee);
  box-shadow: 0 0 0 1.3px #9888a250;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #9888a250,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #765e84;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Red 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(255,216,226,0.8),#ffd8e2);
  box-shadow: 0 0 0 1.3px #b88b9750;
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px #b88b9750,0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #a84862;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Regular State 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Selected State 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
  border-color: #5d9df5;
  box-shadow: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Standard 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block State Transitions 1`] = `
.c3 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  color: #62778c;
}

.c4 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c1 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <span
        className="c3"
      >
        New Block 1
      </span>
    </header>
    <section
      className="c4"
    >
      <div
        className="c5"
      >
        Step 1
      </div>
      <div
        className="c5"
      >
        Step 2
      </div>
      <div
        className="c5"
      >
        Step 3
      </div>
      <div
        className="c5"
      >
        Step 4
      </div>
      <div
        className="c5"
      >
        Step 5
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Creator/New Block Sub Sections 1`] = `
.c5 {
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  color: #6e849a;
}

.c5 > svg {
  display: block;
  width: inherit;
  height: inherit;
}

.c9 .c4 {
  color: #fff;
}

.c10 .c4 {
  color: #6e849a;
}

.c6 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  width: 360px;
  border-radius: 8px;
  cursor: pointer;
  border: solid 2px #fff;
  padding: 0 12px 12px 12px;
  background-color: #fff;
  background-image: linear-gradient(to bottom,rgba(231,234,241,0.8),#e7eaf1);
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16);
  -webkit-transition: box-shadow 0.15s ease;
  transition: box-shadow 0.15s ease;
}

.c0:hover {
  box-shadow: 0 0 0 1.3px rgba(17,49,96,0.16),0 4px 8px 0 rgba(17,49,96,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  font-size: 15px;
  font-weight: 600;
  padding: 0 42px;
  color: #62778c;
}

.c7 > *:not(:last-child) {
  margin-bottom: 8px;
}

.c3 {
  position: absolute;
  left: 0px;
  padding: 0 5px;
}

.c1 {
  position: relative;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 54px;
  background-color: #fff;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <span
        className="c6"
      >
        Section 1
      </span>
    </header>
    <section
      className="c7"
    >
      <div
        className="c8"
      >
        Step 1
      </div>
      <div
        className="c8"
      >
        Step 2
      </div>
    </section>
  </div>
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5"
          color="#6e849a"
          size={16}
        >
          <svg
            data-file-name="SvgHome"
          />
        </span>
      </div>
      <span
        className="c6"
      >
        Section 2 blah blah blah blah blah blah blah blah
      </span>
    </header>
    <section
      className="c7"
    >
      <div
        className="c8"
      >
        Step 1
      </div>
      <div
        className="c8"
      >
        Step 2
      </div>
    </section>
  </div>
</div>
`;
